# openenv-data-cleaning

./: .dockerignore  .gitignore  .openenv-upload-ignore  README.md  TEAMMATE_BASELINE.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
data/: basic_cleaning.json  full_pipeline.json  moderate_cleaning.json
env/: __init__.py  actions.py  environment.py  graders.py  models.py  quality.py  rewards.py
server/: __init__.py  app.py  environment.py  requirements.txt
